--- a/style.css
+++ b/style.css
@@ -150,3 +150,35 @@ main {
     width: 100%;
     height: auto;
 }
+
+/* Features */
+
+.container__features {
+    margin-top: 60px;
+    max-width: 1000px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.features__heading {
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+/* Quality */
+
+.container__quality {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+    justify-content: space-between;
+    margin-top: 40px;
+    padding: 80px;
+    max-width: 1000px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
